# dmw_2003_patcher

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: rust.yml
assets/: style.css
create_dmw_2003_patch/: Cargo.toml  README.md
create_dmw_2003_patch/src/: lib.rs  main.rs
patches/fast_travel/: patcher.json
public/: style.css
src/: checkbox.rs  json.rs  main.rs  mkpsxiso.rs  patch.rs
